# 487-Final

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md  build.bat  run.bat  run.sh  vcpkg.json
.claude/: settings.local.json
app/: CMakeLists.txt
app/include/: app.h  camera.h  classical_detector.h  classifier.h  config.h  evaluator.h  i_hand_detector.h  onnx_detector.h  preprocess.h  renderer.h  smoother.h
app/src/: app.cpp  camera.cpp  classical_detector.cpp  classifier.cpp  config.cpp  evaluator.cpp  main.cpp  onnx_detector.cpp  preprocess.cpp  renderer.cpp  smoother.cpp
gesture-demo/: build.sh
gesture-demo/include/: classical_classifier.h  classical_detector.h  renderer.h
gesture-demo/src/: classical_classifier.cpp  classical_detector.cpp  main.cpp  renderer.cpp  smoother.cpp
include/: camera.h  classical_classifier.h  classical_detector.h  emoji_overlay.h  gesture_types.h  renderer.h  smoother.h
models/: class_names.txt  model.py  preprocessing.txt
scripts/: build.bat  build.sh  download_hagrid_subset.sh  run_eval.bat  run_live.bat  run_live.sh
src/: camera.cpp  classical_classifier.cpp  classical_detector.cpp  emoji_overlay.cpp  main.cpp  renderer.cpp  smoother.cpp
tests/: expected_results.csv
tools/: emoji_demo.cpp
training/: evaluate.py  export_detector_onnx.py  export_onnx.py  prepare_data.py  requirements.txt  train.py  verify_onnx.py
training/configs/: mobilenetv3_small.yaml
